# infa_sem2_2021

./: CMakeLists.txt  main.cpp
contests/: contests.h
contests/contest2/: contest2.h  taskA.cpp  taskB.cpp  taskC.cpp  taskD.cpp  taskE.cpp  taskF.cpp  taskG.cpp  taskH.cpp  taskJ.cpp
contests/contest3/: contest3.h  taskA.cpp  taskB.cpp  taskC.cpp  taskD.cpp  taskE.cpp  taskF.cpp
contests/contest4/: contest4.h
contests/contest5/: contest5.h  taskA.cpp  taskB.cpp  taskC.cpp
contests/contest6/: contest6.h
contests/contest6_2020/: contest6.h  taskA.cpp  taskB.cpp  taskC.cpp  taskD.cpp  taskE.cpp
contests/contest7/: contest7.h  taskA.cpp  taskB.cpp  taskD.cpp
contests/control_test/: control_test.h  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
contests/control_test_2/: contest_test_2.h  task1.cpp  task6.cpp
lab2/: __h.h
lab2/task1/: factorial.hpp
lab2/task2/: fibonnaci.hpp
playground/: playground.h  test.cpp
usables/: graph.cpp  graph.h  my_array.cpp  my_array.h  my_graph.h  my_queue.cpp  my_queue.h  my_stack.h  my_tree.cpp  my_tree.h
usables/containers/: array.cpp  array.h  cyclic_array.cpp  cyclic_array.h  deque.cpp  deque.h  list.h  stack.cpp  stack.h
